# RaspberryPi-Software

./: .gitignore  API_DOCUMENTATION.md  LICENSE.md  README.md  end.py  install.sh  main.py  pyproject.toml  start.py  utils.py
core/: utils.py
scripts/: end.py  receiver.py  start.py
web/: API_DOCUMENTATION.md  index.html  server.py  state.py  ws_server.py
