[project]
name = "raspberrypi-software"
version = "0.1.0"
description = "Software running on the Raspberry Pi to control the 4 motors."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "pigpio>=1.78",
    "requests>=2.33.1",
    "ruff>=0.15.6",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
